docs: add markdown documentation

--- a/notebooks/constitution_analysis.ipynb
+++ b/notebooks/constitution_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "id": "386098b2",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'c:\\\\Users\\\\Jonah\\\\Development\\\\secular-or-religious'"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8279,7 +8279,8 @@
    "id": "2d87497c",
    "metadata": {},
    "source": [
-    "### KMeans with t-SNE"
+    "### KMeans with t-SNE\n",
+    "t-SNE can distort the global distance between points. So these results won't be included in the article, but I wanted to see what the results looked like. I may use something like PCA for dimensionality reduction and cluster the principal components directly at some point."
    ]
   },
   {
@@ -13951,7 +13952,7 @@
     "##### The global distances between data points and cluster centers can be distorted by mapping to a 2 dimensional space with t-SNE. In order to get a better representation, let's:\n",
     "1. Model the embeddings directly with k-means\n",
     "2. Assign cluster labels to data points based on this k-means model\n",
-    "3. Determine the cluster centers\n",
+    "3. Determine the cluster centers in the original 768 dimensional space\n",
     "4. Map the data points and cluster centers together with t-SNE"
    ]
   },
@@ -17874,6 +17875,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e19b135",
+   "metadata": {},
+   "source": [
+    "#### Calculating the cluster centers with the t-SNE reduced dimensions \n",
+    "This is probably fine for the visualization, but later we will figure out the cluster centers with the full dimension embeddings and then map the data points and the cluster centers at the same time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b6a41aba",
@@ -18002,14 +18012,6 @@
     "cluster_ax = sns.scatterplot(data=tsne_centroids, x='t-SNE 1', y='t-SNE 2', style=tsne_centroids.index.values, s=75, hue='Cluster', palette=['grey'], edgecolors='black', legend=False, ax=cluster_ax)\n",
     "cluster_ax.set_title('KMeans clustering (k=4) of embedded ethics')\n",
     "sns.move_legend(cluster_ax, 'upper left', bbox_to_anchor=(1, 1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae771d2a",
-   "metadata": {},
-   "source": [
-    "#### Calculating the cluster centers with the t-SNE reduced dimensions is probably fine for the visualization, but let's figure out the cluster centers with the full dimension embeddings and then map all the data points at the same time."
    ]
   },
   {
@@ -18199,6 +18201,16 @@
     "final_tsne_clustering_df = final_tsne_clustering_df.merge(final_clustering_df.reindex(['Cluster', 'Source'], axis=1), left_index=True, right_index=True)\n",
     "final_tsne_clustering_df.head()\n",
     "final_tsne_clustering_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1690e4",
+   "metadata": {},
+   "source": [
+    "### For the plot below:\n",
+    "* The cluster centers in the plot below were calculated using the full 768 dimensional vectors\n",
+    "* Then the cluster centers were mapped to a 2d space along with the other data points"
    ]
   },
   {
@@ -18489,7 +18501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "id": "3694b629",
    "metadata": {},
    "outputs": [
